--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -30,7 +30,6 @@ unzip("activity.zip")
 rawdata <- read.csv("activity.csv")
 ```
 
-
 ### Examine
 ```{r echo=TRUE}
 summary(rawdata) #Use this. It gives the best overview. Don't have to do the NA check below.
@@ -71,9 +70,10 @@ calcsfordate <- summarize(group_by(dtdata,date),
                          averagefordate = mean(steps),
                          medianfordate = as.double(median(steps, na.rm=TRUE))
                          )
-print(calcsfordate[,]) #TODO I want to see all 61 obs
-write.table(calcsfordate) #TODO This works but not formatted
-kable(calcsfordate) #Why did this print to the console but not to knitr? 
+kable(calcsfordate) 
+
+#total number of steps taken each day
+table(calcsfordate$totalfordate) #53 days. Not in date order.
 ```
 
 ### Graph total number of steps taken
@@ -81,21 +81,13 @@ I don't really see what this shows. It doesn't seem to match the table of the sa
 
 ```{r echo=TRUE}
 hist(calcsfordate$totalfordate, breaks=61)
+hist(calcsfordate$totalfordate, breaks=20)
 ```
 
+### Report the mean and median number of steps taken each day
 ```{r echo=TRUE}
-#total number of steps taken each day
-table(calcsfordate$totalfordate) #53 days. Not in date order.
+kable(select(calcsfordate, date, averagefordate, medianfordate))
 
-#mean number of steps taken each day
-calcsfordate$averagefordate
-
-#median number of steps taken each day
-calcsfordate$averagefordate
-
-select(calcsfordate, averagefordate, medianfordate)
-
-View(select(calcsfordate, averagefordate, medianfordate)) # TODO I want to see all 61 obs
 ```
 
 The NA values are in entire days. So those days are NA.
@@ -111,7 +103,7 @@ calcsforinterval <- summarize(group_by(dtdata,interval),
                              medianforinterval = as.double(median(steps, na.rm=TRUE))
                              )
 
-print(calcsforinterval)
+kable(calcsforinterval)
 ```
 
 
@@ -119,20 +111,30 @@ print(calcsforinterval)
 ## What is the average daily activity pattern?
 1. Make a time series plot (i.e. `type = "l"`) of the 5-minute interval (x-axis) and the average number of steps taken, averaged across all days (y-axis)
 
-2. Which 5-minute interval, on average across all the days in the dataset, contains the maximum number of steps?
-# Answer Eyeballing: 104      835        10927    206.1698113            19
-
-#TODO Use new variable names
+### Plot average number of steps taken for each interval.
 ```{r echo=TRUE}
-intervalmeans <- subinterval3$meanbyinterval
-max(intervalmeans) #206.1698 average number of steps
-which(dtdata[,subinterval3$meanbyinterval] == max(intervalmeans)) #indices 104
-dtdata[104,] #835 This must be wrong. I
-subinterval3[104,] #Maybe it's right 835.
+with(calcsforinterval, plot(interval, averageforinterval, type="l", xlab="5-minute intervals over a 24-hour period", ylab="Average number of steps per interval", xlim=c(0,2400), xaxt="n" ))
+x <- axTicks(1) # Seems like you have to make it match the ticks.
+
+axis(1, at=x, labels=c("00:00", "05:00", "10:00", "15:00", "20:00"))
+```
+
+2. Which 5-minute interval, on average across all the days in the dataset, contains the maximum number of steps?
+
+Answer Eyeballing: 104      835        10927    206.1698113            19
+
+### Find the maximum average number of steps in a 5-minute interval.
+```{r echo=TRUE}
+max(calcsforinterval$averageforinterval) #206.1698 average number of steps
+which(dtdata[,calcsforinterval$averageforinterval] == max(calcsforinterval$averageforinterval)) #index 104
+dtdata[104,] 
+calcsforinterval[104,] 
 
 ```
 
-max(subinterval3$meanbydate)
+The 5-minute interval with the largest average number of steps begins at 08:35 AM; the average number of steps during that interval is a little more than 206.
+
+
 
 ## Imputing missing values
 Note that there are a number of days/intervals where there are missing
@@ -141,24 +143,87 @@ bias into some calculations or summaries of the data.
 
 1. Calculate and report the total number of missing values in the dataset (i.e. the total number of rows with `NA`s)
 
-2. Devise a strategy for filling in all of the missing values in the dataset. The strategy does not need to be sophisticated. For example, you could use the mean/median for that day, or the mean for that 5-minute interval, etc.
-
-3. Create a new dataset that is equal to the original dataset but with the missing data filled in.
-
-4. Make a histogram of the total number of steps taken each day and Calculate and report the **mean** and **median** total number of steps taken per day. Do these values differ from the estimates from the first part of the assignment? What is the impact of imputing missing data on the estimates of the total daily number of steps?
-
 A1: Eight days (columns) have NAs so ALL the rows have NAs. Isn't it more interesting to know which of the columns(dates) have NAs?
 288*8= 2304 = Total NAs. This is confirmed in the summary.
 
-
+```{r echo=TRUE}
 summary(dtdata)
-countofmissing <- count(is.na(dtda)
-
 bad <- which(is.na(dtdata$steps)) # returns indices
-So the answer is 2304?
-dtdata[1:20, 1]
+print(length(bad))
+#So the answer is 2304. Which matches what's in the summary.
 
-A2: Use mean for interval to fill in missing NA
+```
+
+2. Devise a strategy for filling in all of the missing values in the dataset. The strategy does not need to be sophisticated. For example, you could use the mean/median for that day, or the mean for that 5-minute interval, etc.
+
+A2: Use mean for each interval to fill in missing NA.
+
+
+3. Create a new dataset that is equal to the original dataset but with the missing data filled in.
+```{r echo=TRUE}
+procdata <- dtdata %>%
+  select(date, interval, steps) %>%
+  group_by(interval)%>%
+  mutate(avg = mean(steps, na.rm=TRUE))
+ 
+  
+
+
+ 
+```
+
+TODO: THIS MIGHT FINALLY WORK
+```{r echo=TRUE}
+
+v <- length(procdata$steps) #iterate the length of the vector
+for (i in 1:v) {
+  if (!is.na(procdata$steps[i])==TRUE) {
+    }else{
+    procdata$steps[i] <- procdata$avg[i] 
+  }
+}
+
+```
+  
+This works singly. How to make it work in a loop?
+
+> procdata$step[270]
+[1] NA
+> procdata$avg[270]
+[1] 8.698113
+> procdata$step[270] <- procdata$avg[270]
+> procdata$step[270]
+[1] 8.698113
+
+ procdata$step[270] <- procdata$avg[270]
+> procdata$step[270]
+
+
+
+4. Make a histogram of the total number of steps taken each day and Calculate and report the **mean** and **median** total number of steps taken per day. Do these values differ from the estimates from the first part of the assignment? What is the impact of imputing missing data on the estimates of the total daily number of steps?
+
+```{r echo=TRUE}
+calcsforprocdate <- summarize(group_by(procdata,date),
+                         totalfordate = sum(steps),
+                         averagefordate = mean(steps),
+                         medianfordate = as.double(median(steps, na.rm=TRUE))
+                         )
+```                         
+
+```{r echo=TRUE}
+hist(procdata$steps, breaks=61)
+hist(procdata$steps, breaks=20)
+```
+
+### Report the mean and median number of steps taken each day
+
+```{r echo=TRUE}
+
+
+kable(select(calcsforprocdate, date, averagefordate, medianfordate))
+
+```
+
 
 
 
@@ -172,5 +237,5 @@ the dataset with the filled-in missing values for this part.
 1. Make a panel plot containing a time series plot (i.e. `type = "l"`) of the 5-minute interval (x-axis) and the average number of steps taken, averaged across all weekday days or weekend days (y-axis). The plot should look something like the following, which was created using **simulated data**:
 
 
-library(lubridate)
+
 
